ViTables ChangeLog
==================
** May 07, 2017 **
Fixed a bug in the File -> New operation. New files could not be created.

** May 06, 2017 **
The 'Thanks to' list has been updated.

Copyright notice and release version have been updated.

** November 06, 2014 **
Project file (i.e vitables.pro) and translations have all been updated.

** December 12, 2013 **
Context menus on views are now allowed which is a good thing for plugins.

** November 19, 2013 **
First working version of the columnar_org plugin is available.
I think I've fixed all serious bugs.

** November 15, 2013 **
Ungrouping arrays has been implemented in the columnar_org plugin.
At the moment I just see one minor bug. All functionality has been
implemented so its time for a final debug and refactor sessions.

** November 14, 2013 **
Code in the columnar_org plugin has been debugged and refactored.
A small bug in the closing arrays process remains open. Ungrouping hasn't
been implemented yet.

** November 13, 2013 **
Still working in the columnar_org plugin.
Grouping arrays has been debugged and now it works well in most cases.
Closing arrays has been implemented. More debugging and breaking-up the
groups to recover their components are pending tasks.

** November 11, 2013 **
Still working in the columnar_org plugin.
Grouping arrays has been debugged and now it works well in most cases.
Closing arrays and breaking-up the groups to recover components remains
to be done.

** October 23, 2013 **
Still working in the columnar_org plugin.
Grouping arrays is working with some minor (I think) bugs.

** October 23, 2013 **
Still working in the columnar_org plugin.
How the plugin should work is now clearer: select several arrays via their
checkboxes and launch the command Join Arrays. If the selected collection of
arrays cannot be joined in a unique view then the launch command is disabled.


** October 21, 2013 **
A new plugin, columnar_org, is being developed.